# geopera-python

./: .gitignore  CHANGELOG.md  README.md  fluent.py  opc-config.yaml  openapi.json  patch_metadata.py  regen.sh  scrub_spec.py  test_python_sdk_smoke.py
geopera-sdk/: README.md  pyproject.toml
geopera-sdk/geopera/: __init__.py
geopera-sdk/geopera/api/operations/: alerts_acknowledge_event.py  alerts_create_rule.py  alerts_delete_rule.py  alerts_events_list.py  alerts_rule_get.py  alerts_rules_list.py  alerts_test_rule.py  alerts_update_rule.py  analytics_band_math.py  analytics_calculate_index.py  analytics_execute.py  (+214 more)
geopera-sdk/geopera/models/: __init__.py  accrual_input.py  acknowledge_event_input.py  add_member_input.py  alert_event_output.py  alert_event_output_alert_event.py  alert_events_list_input.py  alert_rule_get_input.py  alert_rule_output.py  alert_rule_output_alert_rule.py  alert_rules_list_input.py  analytics_execute_output.py  api_key_create_input.py  api_key_create_output.py  api_key_list_input.py  api_key_revoke_input.py  api_key_revoke_output.py  approval_get_input.py  approval_output.py  approval_ref_input.py  approvals_list_input.py  approve_input.py  archive_estimate_input.py  archive_estimate_input_captures_item.py  archive_estimate_output.py  archive_estimate_output_errors_item.py  archive_estimate_output_groups_item.py  area.py  asset_delete_input.py  asset_delete_output.py  asset_download_input.py  asset_output.py  attach_input.py  band_formula_create_input.py  band_formula_delete_input.py  band_formula_delete_output.py  band_formula_get_input.py  band_formula_output.py  band_formula_update_input.py  band_formulas_list_input.py  (+284 more)
(+1 files in other folders)
