[tool.poetry]
name = "geopera"
version = "2.0.0"
description = "Official Python client for the Geopera geospatial data platform"
authors = ["Geopera <support@geopera.com>"]
readme = "README.md"
packages = [
    { include = "geopera" },
]
include = ["geopera/py.typed"]
license = "MIT"
homepage = "https://docs.geopera.com"
repository = "https://github.com/geo-pera/geopera-python"
documentation = "https://docs.geopera.com/api-reference"
keywords = ["geopera", "satellite", "geospatial", "earth-observation", "stac", "remote-sensing", "api-client"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Topic :: Scientific/Engineering :: GIS", "Topic :: Software Development :: Libraries :: Python Modules", "Typing :: Typed"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.23.1,<0.29.0"
attrs = ">=22.2.0"

[tool.poetry.urls]
Documentation = "https://docs.geopera.com/api-reference"
Source = "https://github.com/geo-pera/geopera-python"
Changelog = "https://github.com/geo-pera/geopera-python/blob/main/CHANGELOG.md"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
